<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Mc3" Id="{128fe823-5e0a-4d4b-9c8c-d35aeb611c41}">
    <Declaration><![CDATA[

VAR_GLOBAL
	//Track_BigCircle		: 	MC_PlanarTrack; 	
	//Track_MainCircle	: 	MC_PlanarTrack;
 	//Track_SmallCircle	: 	MC_PlanarTrack;
	
	MC_Tracks    		:	ARRAY[1..3] OF MC_PlanarTrack;
	MC_Trackfeedback	:	ARRAY[1..3] OF MC_PlanarFeedback;
	TrackTrail 			:	MC_PlanarTrackTrail;
	


	fbPlanarMover		:	ARRAY[1..nNumMaxMovers] OF FB_PlanarMover;
	MoverFeedback		:	ARRAY[1..nNumMaxMovers] OF MC_PlanarFeedback;
	
	
	
	Mover				:	ARRAY[0..nNumMaxMovers] OF MoverSort;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>